yamls/ingress-demo/traefik/simple-ingress-routes/1-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafrana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.ks1.cacttus.us`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
